--- a/Views/Home/Serviços.cshtml
+++ b/Views/Home/Serviços.cshtml
@@ -3,18 +3,20 @@
 }
 
 <h3>Nossos serviços:</h3>
+<br>
 
-<li>Serviço 1</li>
+<h5>Serviço 1</h5>
 <li>Banho e tosa</li>
 <li>R$10,00</li>
 <br>
 
-<li>Serviço 2</li>
+<h5>Serviço 2</h5>
 <li>SPA</li>
 <li>R$30,00</li>
 <br>
 
-<li>Serviço 3</li>
+
+<h5>Serviço 3</h5>
 <li>Hotel</li>
 <li>R$40,00</li>
 <br>
